"Tool Select Box not found for space IMAGE_EDITOR." message is often displayed #58256

Closed
opened 2018-11-30 02:10:14 +01:00 by Dan Sinni · 11 comments

System Information
Operating system: Windows 10 Home x64
Graphics card: NVIDIA GeForce GTX 860M

Blender Version
Broken: 2.8 Beta, 26d5a3625e
image.png

Short description of error
"Tool Select Box not found for space IMAGE_EDITOR." message is often displayed in the bottom toolbar, in multiple editors/screens, for various (some unknown) reasons.

Exact steps for others to reproduce the error

Any of these:

  • Open the Preferences window
  • Move Blender window to different screen
  • Switch to Rendering tab
  • and many more...

Note that this happens even if the Select Box tool is not selected.

**System Information** Operating system: Windows 10 Home x64 Graphics card: NVIDIA GeForce GTX 860M **Blender Version** Broken: 2.8 Beta, 26d5a3625ed ![image.png](https://archive.blender.org/developer/F5761709/image.png) **Short description of error** "Tool `Select Box` not found for space `IMAGE_EDITOR`." message is often displayed in the bottom toolbar, in multiple editors/screens, for various (some unknown) reasons. **Exact steps for others to reproduce the error** Any of these: - Open the `Preferences` window - Move Blender window to different screen - Switch to `Rendering` tab - and many more... Note that this happens even if the `Select Box` tool is not selected.
Author

Added subscriber: @DanSinni

Added subscriber: @DanSinni

#58286 was marked as duplicate of this issue

#58286 was marked as duplicate of this issue
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2018-11-30 09:51:36 +01:00
Member

Can confirm, this is true whenever there is an Image Editor in View or Mask mode.
You'll always get the warning pressing T to bring up the toolbar in these two cases.

There are no tools defined in these modes at all afaics [atm. -- there will probably some being added here], but for now there should probably be no "false" warning in this case.
@ideasman42 : assigning to you [but feel free to throw back at me and I can check]

Can confirm, this is true whenever there is an Image Editor in `View` or `Mask` mode. You'll always get the warning pressing `T` to bring up the toolbar in these two cases. There are no tools defined in these modes at all afaics [atm. -- there will probably some being added here], but for now there should probably be no "false" warning in this case. @ideasman42 : assigning to you [but feel free to throw back at me and I can check]
Member

Added subscriber: @DeepakV

Added subscriber: @DeepakV

Added subscriber: @Michael_Gregg

Added subscriber: @Michael_Gregg

I got this error when I had a film strip in the video sequencer and then tried to make another single frame render with F12. If I delete the film strip from the video sequencer, then I can make a new render with F12, but the error is still reported at the bottom of the screen.

I got this error when I had a film strip in the video sequencer and then tried to make another single frame render with F12. If I delete the film strip from the video sequencer, then I can make a new render with F12, but the error is still reported at the bottom of the screen.

Added subscriber: @brecht

Added subscriber: @brecht

This warning is being shown constantly when switching workspaces and rendering, would be good to get it fixed or at least silenced.

This warning is being shown constantly when switching workspaces and rendering, would be good to get it fixed or at least silenced.

This issue was referenced by 80816fc712

This issue was referenced by 80816fc71235c07c8a0ae74d015116e852459114

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58256
No description provided.