Fix T58256: error message w/ missing Select Box tool

Support space modes not having tools.